--- a/PhotoEditor/PhotoEditor/App/Info.plist
+++ b/PhotoEditor/PhotoEditor/App/Info.plist
@@ -19,5 +19,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Urbanist-Regular.ttf</string>
+		<string>Urbanist-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
